example
[Pipeline] sh
+ python /home/jenkins/agent/workspace/XSF/APPS/Latest_OS_Factory/pipeline/lib/scripts/compare_latest_ocs_images.py OS_v1_RHEL_9_2025_w04 OS_v1_RHEL_9_2025_w04 ''\''['\''OS_v1_RHEL_9_2025_w04'\'', '\''OS_v1_RHEL_9_2024_w51'\'', '\''ocs_dev_rhel_9_2024_w51'\'', '\''ocs_dev_rhel_9_2024_w47'\'']'\''' ''\''['\''OS_v1_RHEL_9_2025_w04'\'', '\''OS_v1_RHEL_9_2024_w51'\'']'\'''
  File "/home/jenkins/agent/workspace/XSF/APPS/Latest_OS_Factory/pipeline/lib/scripts/compare_latest_ocs_images.py", line 16
    latest_os_paris = sys.argv[1]
    ^
IndentationError: expected an indented block after 'if' statement on line 14
